asset-consumer/deployments/aassetconsumer.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: asset-consumer
  name: asset-consumer
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: asset-consumer
    spec:
      containers:
      - image: ibmcase/asset-consumer:latest
        imagePullPolicy: IfNotPresent
        name: asset-consumer
