asset-consumer/deployments/assetconsumer.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: asset-consumer
  name: asset-consumer
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: asset-consumer
    spec:
      containers:
      - image: ibmcase/asset-consumer:latest
        imagePullPolicy: IfNotPresent
        name: asset-consumer
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /conf
      volumes:
      - name: config-volume
        configMap:
          name: asset-consumer-cm

---
apiVersion: v1
kind: Service
metadata:
  name: asset-consumer-svc
  labels:
    chart: asset-consumer
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: asset-consumer-svc
  selector:
    app: asset-consumer
